added a few details

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel=stylesheet href="/static/style.css">
-  <title>Scraping HN for Search Term</title>
+  <title>Scraping HN for {search_term}</title>
 </head>
 <body>
-  <h1>Scraping HN for Search Term</h1>
+  <h1>Scraping HN for <span class="red">{search_term}</span></h1>
   <form>
     <form action="/", method="get">
       <input type="text" name="search" placeholder="Keyword">
