--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Scraping HN for {search_term}</title>
 </head>
 <body>
-  <h1>Scraping HN for <span class="red">{search_term}</span></h1>
+  <h1>Scraping <a href="https://news.ycombinator.com/">HN</a> for <span class="red">{search_term}</span></h1>
   <form>
     <form action="/", method="get">
       <input type="text" name="search" placeholder="Keyword">
